--- a/kakarot-app/src/app/app.component.html
+++ b/kakarot-app/src/app/app.component.html
@@ -1,11 +1,7 @@
-<div>
-  <div class="container orange-light">
-    <div class="col">
-      <h1>{{welcomeMessage}}</h1>
-    </div>
-  </div>
+<!--<ul>-->
+  <!--<li><a routerLink="home">Home</a></li>-->
+<!--</ul>-->
 
+<app-home></app-home>
 
-
-
-</div>
+<router-outlet></router-outlet>
