update home component.ts / added todo list array

--- a/kakarot-app/src/app/home/home.component.html
+++ b/kakarot-app/src/app/home/home.component.html
@@ -16,10 +16,12 @@
     </div>
 
     <div class="col">
-      <br><span>{{inputText}}</span><br>
+      <ul>
+        <li *ngFor="let item of todoList">
+          <span>{{item}}</span> <br>
+        </li>
+      </ul>
     </div>
   </div>
-
-
 
 </div>
