--- a/kakarot-app/src/app/home/home.component.scss
+++ b/kakarot-app/src/app/home/home.component.scss
@@ -28,6 +28,8 @@
   color: white;
   font-weight: 900;
   margin-top:30px;
+  margin-bottom:30px;
+  margin-right:30px;
   text-decoration-line: underline;
 
 }
@@ -55,7 +57,7 @@ input.btn {
 }
 
 .button {
-    background-color: #4CAF50; /* Green */
+    background-color: #00a7be;
     border: none;
     color: white;
     text-align: center;
@@ -64,6 +66,25 @@ input.btn {
     font-size: 10px;
     margin: 4px 10px;
     cursor: pointer;
-    border-radius: 75%;
+     height: 20px;
+     width: 20px;
+     border-radius: 50%;
 }
+
+.button:hover {
+    background-color: #ddd;
+    background-image: linear-gradient(to top, #fafafa, #ddd);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#fafafa', EndColorStr='#dddddd');
+}
+
+.button:active {
+    box-shadow: 0 0 4px 2px rgba(0,0,0,.3) inset;
+    position: relative;
+    top: 1px;
+
+}
+
+
+
+
 
